<resources>
    <string name="app_name">Ex02 Cadastro Do Cliente</string>
    <string name="add_btn">Adicionar</string>
    <string name="delete_btn">Excluir</string>
    <string name="company_label">Empresa</string>
    <string name="owner_label">Proprietário</string>
    <string name="list_screen_label">Clientes</string>
    <string name="register_screen_label">Criar Cadastro</string>
    <string name="info_screen_label">Detalhes do Cliente</string>


    <string name="full_name_label">Nome Completo</string>
    <string name="email_label">Email</string>
    <string name="phone_label">Telefone para contato</string>
    <string name="trade_name_label">Nome Fantasia</string>
    <string name="birth_date_label">Ativa Desde: </string>
    <string name="individualEntrepreneur_label">É MEI?</string>
    <string name="yes_label">SIM</string>
    <string name="no_label">NÃO</string>
    <string name="ok_label">Ok</string>
    <string name="confirm_button_label">Confirmar</string>
    <string name="data_placeholder">dd/MM/aaaa</string>

    <!-- Feedback messages -->
    <string name="success_feedback">Operação realizada com sucesso</string>
    <string name="error_feedback">Ocorreu um erro ao tentar recuperar as infomações</string>
    <string name="no_items_registered">Não há clientes cadastrados no momento.</string>
    <string name="saving_user_error_feedback">Ocorreu um erro ao salvar usuário.</string>
    <string name="no_valid_info_feedback">Por favor preencha todos os campos com informações válidas.</string>
    <string name="deleting_user_error_feedback">Ocorreu um erro ao deletar usuário.</string>
    <string name="invalid_date_feedback">A data informada é inválida!</string>
    <string name="fill_all_fields_feedback">Preencha todos os campos</string>

</resources>
